Update english lang file (some things are still missing from it)

--- a/src/main/resources/assets/twilightforest/lang/en_US.lang
+++ b/src/main/resources/assets/twilightforest/lang/en_US.lang
@@ -27,6 +27,9 @@ tile.TFBossSpawner.1.name=Lich Spawner
 tile.TFBossSpawner.2.name=Hydra Spawner
 tile.TFBossSpawner.3.name=Ur-ghast Spawner
 tile.TFBossSpawner.4.name=Knight Phantoms Spawner
+tile.twilightforest.BossSpawner.5.name=Snow Queen Spawner
+tile.twilightforest.BossSpawner.6.name=Minoshroom Spawner
+tile.twilightforest.BossSpawner.7.name=Alpha Yeti Spawner
 tile.TFFireflyJar.name=Firefly Jar
 tile.TFPlant.3.name=Moss Patch
 tile.TFPlant.4.name=Mayapple
