--- a/src/main/resources/assets/twilightforest/lang/en_US.lang
+++ b/src/main/resources/assets/twilightforest/lang/en_US.lang
@@ -169,15 +169,28 @@ tile.CastleBrick.0.name=Castle Brick
 tile.CastleBrick.1.name=Worn Castle Brick
 tile.CastleBrick.2.name=Cracked Castle Brick
 tile.CastleBrick.3.name=Castle Roof Tile
-tile.CastleMagic.0.name=Pink Castle Rune Brick
-tile.CastleMagic.1.name=Blue Castle Rune Brick
-tile.CastleMagic.2.name=Yellow Castle Rune Brick
+tile.CastleDoor.0.name=Blue Castle Door
+tile.CastleDoor.1.name=Yellow Castle Door
+tile.CastleDoor.2.name=Pink Castle Door
+tile.CastleDoor.3.name=Violet Castle Door
+tile.CastleDoorVanished.0.name=Blue Castle Door
+tile.CastleDoorVanished.1.name=Yellow Castle Door
+tile.CastleDoorVanished.2.name=Pink Castle Door
+tile.CastleDoorVanished.3.name=Violet Castle Door
+tile.CastleMagic.0.name=Blue Castle Rune Brick
+tile.CastleMagic.1.name=Yellow Castle Rune Brick
+tile.CastleMagic.2.name=Pink Castle Rune Brick
 tile.CastleMagic.3.name=Violet Castle Rune Brick
 tile.ForceField.0.name=Violet Force Field
 tile.ForceField.1.name=Pink Force Field
 tile.ForceField.2.name=Orange Force Field
 tile.ForceField.3.name=Green Force Field
 tile.ForceField.4.name=Blue Force Field
+tile.CinderFurnaceIdle.name=Cinder Furnace [NYI]
+tile.CinderFurnaceLit.name=Cinder Furnace [NYI]
+tile.CinderLog.0.name=Cinder Log [NYI]
+tile.CinderLog.4.name=Cinder Log [NYI]
+tile.CinderLog.8.name=Cinder Log [NYI]
 
 item.nagaScale.name=Naga Scale
 item.plateNaga.name=Naga Scale Tunic
@@ -371,7 +384,9 @@ entity.TwilightForest.Troll.name=Cave Troll
 entity.TwilightForest.Giant Miner.name=Giant Miner
 entity.TwilightForest.Armored Giant.name=Armored Giant
 entity.TwilightForest.Ice Crystal.name=Ice Crystal
+entity.TwilightForest.RovingCube.name=Roving Cube [NYI]
 entity.TwilightForest.Apocalypse Cube.name=Apocolypse Cube [NYI]
+entity.TwilightForest.Harbinger Cube.name=Harbinger Cube [NYI]
 entity.TwilightForest.Adherent.name=Adherent [NYI]
 
 achievement.twilightPortal=Twilight Portal
