Add missing localization

--- a/src/main/resources/assets/twilightforest/lang/en_US.lang
+++ b/src/main/resources/assets/twilightforest/lang/en_US.lang
@@ -7,6 +7,7 @@ tile.TFLeaves.0.name=Twilight Oak Leaves
 tile.TFLeaves.1.name=Canopy Tree Leaves
 tile.TFLeaves.2.name=Mangrove Leaves
 tile.TFLeaves.3.name=Rainbow Oak Leaves
+tile.TFLeaves.11.name=Rainbow Oak Leaves
 tile.TFFirefly.name=Firefly
 tile.TFCicada.name=Cicada
 tile.TFPortal.name=Twilight Forest Portal
