Add more missing localization

--- a/src/main/resources/assets/twilightforest/lang/en_US.lang
+++ b/src/main/resources/assets/twilightforest/lang/en_US.lang
@@ -3,6 +3,14 @@ tile.TFLog.0.name=Twilight Oak Wood
 tile.TFLog.1.name=Canopy Tree Wood
 tile.TFLog.2.name=Mangrove Wood
 tile.TFLog.3.name=Darkwood Wood
+tile.TFLog.4.name=Twilight Oak Wood
+tile.TFLog.5.name=Canopy Tree Wood
+tile.TFLog.6.name=Mangrove Wood
+tile.TFLog.7.name=Darkwood Wood
+tile.TFLog.8.name=Twilight Oak Wood
+tile.TFLog.9.name=Canopy Tree Wood
+tile.TFLog.10.name=Mangrove Wood
+tile.TFLog.11.name=Darkwood Wood
 tile.TFLeaves.0.name=Twilight Oak Leaves
 tile.TFLeaves.1.name=Canopy Tree Leaves
 tile.TFLeaves.2.name=Mangrove Leaves
@@ -84,6 +92,14 @@ tile.TFMagicLog.0.name=Timewood
 tile.TFMagicLog.1.name=Transwood
 tile.TFMagicLog.2.name=Minewood
 tile.TFMagicLog.3.name=Sortingwood
+tile.TFMagicLog.4.name=Timewood
+tile.TFMagicLog.5.name=Transwood
+tile.TFMagicLog.6.name=Minewood
+tile.TFMagicLog.7.name=Sortingwood
+tile.TFMagicLog.8.name=Timewood
+tile.TFMagicLog.9.name=Transwood
+tile.TFMagicLog.10.name=Minewood
+tile.TFMagicLog.11.name=Sortingwood
 tile.TFMagicLogSpecial.0.name=Timewood Clock
 tile.TFMagicLogSpecial.1.name=Heart of Transformation
 tile.TFMagicLogSpecial.2.name=Minewood Core
