Backport wooden planks from later TF versions

--- a/src/main/resources/assets/twilightforest/lang/en_US.lang
+++ b/src/main/resources/assets/twilightforest/lang/en_US.lang
@@ -40,6 +40,14 @@ tile.twilightforest.BossSpawner.5.name=Snow Queen Spawner
 tile.twilightforest.BossSpawner.6.name=Minoshroom Spawner
 tile.twilightforest.BossSpawner.7.name=Alpha Yeti Spawner
 tile.TFFireflyJar.name=Firefly Jar
+tile.TFPlank.0.name=Twilight Oak Planks
+tile.TFPlank.1.name=Canopy Planks
+tile.TFPlank.2.name=Mangrove Planks
+tile.TFPlank.3.name=Darkwood Planks
+tile.TFPlank.4.name=Timewood Planks
+tile.TFPlank.5.name=Transwood Planks
+tile.TFPlank.6.name=Minewood Planks
+tile.TFPlank.7.name=Sortingwood Planks
 tile.TFPlant.3.name=Moss Patch
 tile.TFPlant.4.name=Mayapple
 tile.TFPlant.5.name=Clover Patch [WIP]
