Add localization for entity.TwilightForest.Penguin.name (en_US)

--- a/src/main/resources/assets/twilightforest/lang/en_US.lang
+++ b/src/main/resources/assets/twilightforest/lang/en_US.lang
@@ -368,6 +368,7 @@ entity.TwilightForest.Hydra.name=Hydra
 entity.TwilightForest.HydraHead.name=Hydra Head
 entity.TwilightForest.Twilight Lich.name=Twilight Lich
 entity.TwilightForest.Glacier Penguin.name=Penguin
+entity.TwilightForest.Penguin.name=Penguin
 entity.TwilightForest.Tiny Bird.name=Tiny Bird
 entity.TwilightForest.Forest Squirrel.name=Forest Squirrel
 entity.TwilightForest.Forest Bunny.name=Forest Bunny
