Add localization for entity.TwilightForest.Penguin.name (zh_CN)

--- a/src/main/resources/assets/twilightforest/lang/zh_CN.lang
+++ b/src/main/resources/assets/twilightforest/lang/zh_CN.lang
@@ -368,6 +368,7 @@ entity.TwilightForest.Hydra.name=九头蛇
 entity.TwilightForest.HydraHead.name=九头蛇头
 entity.TwilightForest.Twilight Lich.name=巫妖
 entity.TwilightForest.Glacier Penguin.name=企鹅
+entity.TwilightForest.Penguin.name=企鹅
 entity.TwilightForest.Tiny Bird.name=小鸟
 entity.TwilightForest.Forest Squirrel.name=松鼠
 entity.TwilightForest.Forest Bunny.name=兔子
