--- a/src/main/resources/assets/twilightforest/lang/zh_CN.lang
+++ b/src/main/resources/assets/twilightforest/lang/zh_CN.lang
@@ -216,6 +216,11 @@ tile.CinderFurnaceLit.name=余烬熔炉 [NYI]
 tile.CinderLog.0.name=余烬原木 [NYI]
 tile.CinderLog.4.name=余烬原木 [NYI]
 tile.CinderLog.8.name=余烬原木 [NYI]
+tile.TFTrophy.0.name=九头蛇战利品
+tile.TFTrophy.1.name=娜迦战利品
+tile.TFTrophy.2.name=巫妖战利品
+tile.TFTrophy.3.name=暮色恶魂战利品
+tile.TFTrophy.4.name=冰雪女王战利品
 
 item.adherentFragment.name=信徒法袍残片
 item.nagaScale.name=娜迦鳞片
