--- a/src/main/resources/assets/twilightforest/lang/en_US.lang
+++ b/src/main/resources/assets/twilightforest/lang/en_US.lang
@@ -491,4 +491,4 @@ achievement.twilightProgressCastle.desc=What could even be in that castle?!?
 tooltip.tf.adherent=An Adherent, but to whom?
 tooltip.tf.harbinger=A Harbinger, but of what?
 
-chat.tf.wrongportalitem=Hm, what do you expect to happen? Try to use Quick and Dirty Portal Generator.
+chat.tf.wrongportalitem=Hm, what do you expect to happen? Try to use %s.
