Update zh_CN.lang (#14)

--- a/src/main/resources/assets/twilightforest/lang/zh_CN.lang
+++ b/src/main/resources/assets/twilightforest/lang/zh_CN.lang
@@ -279,8 +279,8 @@ item.meefStroganoff.name=牛头人沙拉酱肉
 item.mazeWafer.name=迷宮薄饼
 item.emptyMagicMap.name=空白的魔法地图
 item.emptyMazeMap.name=空白的迷宮地图
-item.harbingerFragment.name=先驱立方体碎片
 item.emptyOreMap.name=空白的迷宮/矿石地图
+item.harbingerFragment.name=先驱立方体碎片
 item.oreMagnet.name=矿石磁铁
 item.crumbleHorn.name=粉碎号角
 item.peacockFan.name=孔雀羽毛扇
@@ -378,8 +378,8 @@ entity.TwilightForest.Tiny Bird.name=小鸟
 entity.TwilightForest.Forest Squirrel.name=松鼠
 entity.TwilightForest.Forest Bunny.name=兔子
 entity.TwilightForest.Forest Raven.name=乌鸦
-entity.TwilightForest.Questing Ram.name=谜题样
-entity.TwilightForest.Twilight Kobold.name=哥布林
+entity.TwilightForest.Questing Ram.name=谜题羊
+entity.TwilightForest.Twilight Kobold.name=地精
 entity.TwilightForest.Boggard.name=博加德
 entity.TwilightForest.Lich Minion.name=巫妖仆人
 entity.TwilightForest.Loyal Zombie.name=忠诚的僵尸
@@ -401,9 +401,9 @@ entity.TwilightForest.Tower Golem.name=高塔铁傀儡
 entity.TwilightForest.Tower Termite.name=高塔蠹虫
 entity.TwilightForest.Redscale Broodling.name=寄生虫
 entity.TwilightForest.Tower Boss.name=暮色恶魂
-entity.TwilightForest.Block&Chain Goblin.name=链球哥布林
-entity.TwilightForest.Upper Goblin Knight.name=高阶哥布林骑士
-entity.TwilightForest.Lower Goblin Knight.name=低阶哥布林骑士
+entity.TwilightForest.Block&Chain Goblin.name=链球地精
+entity.TwilightForest.Upper Goblin Knight.name=高阶地精骑士
+entity.TwilightForest.Lower Goblin Knight.name=低阶地精骑士
 entity.TwilightForest.Helmet Crab.name=寄居蟹
 entity.TwilightForest.Knight Phantom.name=幻影骑士
 entity.TwilightForest.Yeti.name=雪人
@@ -490,3 +490,5 @@ achievement.twilightProgressCastle.desc=城堡里能有什么?!?
 
 tooltip.tf.adherent=信徒, 谁的信徒?
 tooltip.tf.harbinger=先驱, 什么的先驱?
+
+chat.tf.wrongportalitem=你在期待什么? 尝试使用 %s 吧.
