Revert TFPlanks to TFPlank + remap (#82)
* Revert TFPlanks to TFPlank + remap

* update lang files

--- a/src/main/resources/assets/twilightforest/lang/en_US.lang
+++ b/src/main/resources/assets/twilightforest/lang/en_US.lang
@@ -11,14 +11,14 @@ tile.TFLog.8.name=Twilight Oak Wood
 tile.TFLog.9.name=Canopy Tree Wood
 tile.TFLog.10.name=Mangrove Wood
 tile.TFLog.11.name=Darkwood Wood
-tile.TFPlanks.0.name=Twilight Oak Planks
-tile.TFPlanks.1.name=Canopy Tree Planks
-tile.TFPlanks.2.name=Mangrove Planks
-tile.TFPlanks.3.name=Darkwood Planks
-tile.TFPlanks.4.name=Timewood Planks
-tile.TFPlanks.5.name=Transwood Planks
-tile.TFPlanks.6.name=Minewood Planks
-tile.TFPlanks.7.name=Sortingwood Planks
+tile.TFPlank.0.name=Twilight Oak Planks
+tile.TFPlank.1.name=Canopy Tree Planks
+tile.TFPlank.2.name=Mangrove Planks
+tile.TFPlank.3.name=Darkwood Planks
+tile.TFPlank.4.name=Timewood Planks
+tile.TFPlank.5.name=Transwood Planks
+tile.TFPlank.6.name=Minewood Planks
+tile.TFPlank.7.name=Sortingwood Planks
 tile.TFWoodSlab.0.name=Twilight Oak Slab
 tile.TFWoodSlab.1.name=Canopy Tree Slab
 tile.TFWoodSlab.2.name=Mangrove Slab
